--- a/rpc/CMakeLists.txt
+++ b/rpc/CMakeLists.txt
@@ -1,6 +1,14 @@
 cmake_minimum_required(VERSION 3.14)
 project(rpc)
 
+set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CmakeConfig)
+
 set(CMAKE_CXX_STANDARD 14)
+find_package(Boost COMPONENTS locale)
+find_package(CryptoPP REQUIRED)
+
+include_directories(${Boost_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR})
 
 add_executable(rpc main.cpp rpc.cpp rpc.h)
+
+target_link_libraries(rpc LINK_PUBLIC ${Boost_LIBRARIES} ${CRYPTOPP_LIBRARIES})
