--- a/rpc/CMakeLists.txt
+++ b/rpc/CMakeLists.txt
@@ -10,6 +10,6 @@ find_package(CURL REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${CURL_INCLUDE_DIR})
 
-add_executable(rpc main.cpp rpc.cpp rpc.h encode.h encode.cpp)
+add_executable(rpc main.cpp rpc.h encode.h encode.cpp curl_wrapper.cpp curl_wrapper.h)
 
 target_link_libraries(rpc LINK_PUBLIC ${Boost_LIBRARIES} ${CRYPTOPP_LIBRARIES} ${CURL_LIBRARIES})
