--- a/rpc/CMakeLists.txt
+++ b/rpc/CMakeLists.txt
@@ -4,11 +4,13 @@ project(rpc)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CmakeConfig)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_FILE_OFFSET_BITS=64")
 find_package(Boost COMPONENTS locale)
 find_package(CryptoPP REQUIRED)
 find_package(CURL REQUIRED)
+find_package(FUSE REQUIRED)
 
-include_directories(${Boost_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${CURL_INCLUDE_DIR})
+include_directories(${Boost_INCLUDE_DIR} ${CRYPTOPP_INCLUDE_DIR} ${CURL_INCLUDE_DIR} ${FUSE_INCLUDE_DIRS})
 add_library(rpc-library rpc.h encode.h encode.cpp curl_wrapper.cpp curl_wrapper.h decode.cpp decode.h)
 target_link_libraries(rpc-library LINK_PUBLIC ${Boost_LIBRARIES} ${CRYPTOPP_LIBRARIES} ${CURL_LIBRARIES})
 
@@ -16,4 +18,4 @@ add_executable(rpc main.cpp)
 target_link_libraries(rpc LINK_PUBLIC rpc-library)
 
 add_executable(BFS rpc.h encode.h encode.cpp curl_wrapper.cpp curl_wrapper.h decode.cpp decode.h ../fuse/bfs_fuse.cpp ../fuse/bfs_fuse.h)
-target_link_libraries(BFS LINK_PUBLIC rpc-library)
+target_link_libraries(BFS LINK_PUBLIC rpc-library ${FUSE_LIBRARIES})
